--- a/ML_002.ipynb
+++ b/ML_002.ipynb
@@ -5,17 +5,32 @@
     "colab": {
       "name": "ML 002.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPqor5L3OC1p+CrOdLBnrFv",
+      "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     }
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/victorananias/alura-machine-learning-001/blob/master/ML_002.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "qMV_RVHONXyr"
       },
       "source": [
@@ -29,11 +44,12 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
         "id": "Z1L5FeR8PSGi",
-        "outputId": "f5541101-d02a-4963-b2cf-7095a94a20ae"
+        "outputId": "f7f44ba9-bb4a-4963-be07-0627065a444e"
       },
       "source": [
         "dataframe = pd.read_csv(uri)\r\n",
@@ -131,7 +147,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 0
         }
       ]
     },
@@ -139,10 +155,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAFqtV75PZ5r",
-        "outputId": "a0e57f65-a290-434b-e60a-5dc238821b46"
+        "outputId": "470ebe40-0b72-4948-e27e-bf1a8754c756"
       },
       "source": [
         "x = dataframe[['home', 'how_it_works', 'contact']]\r\n",
@@ -166,7 +183,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 0
         }
       ]
     },
@@ -174,10 +191,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "abvcmXLfQENn",
-        "outputId": "33c7e931-f268-41f1-bed9-6f5b2d08e5bc"
+        "outputId": "05a3b492-2fa1-4e71-d4ca-b2e612815e36"
       },
       "source": [
         "dataframe.shape"
@@ -194,7 +212,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 0
         }
       ]
     },
@@ -202,10 +220,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "VhQdHzcYRDts",
-        "outputId": "4a2b2102-27b0-4897-e140-5ac3d2c4bb23"
+        "outputId": "e3d6262d-e1cd-4097-cce8-71037238cd78"
       },
       "source": [
         "train_x = x[:75]\r\n",
@@ -230,10 +249,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "ymeu_RLiReCg",
-        "outputId": "984de136-b2da-4458-f25c-9a6af386fddc"
+        "outputId": "f168836c-7558-4c93-9016-d1de4e528012"
       },
       "source": [
         "from sklearn.svm import LinearSVC\r\n",
@@ -253,7 +273,7 @@
         {
           "output_type": "stream",
           "text": [
-            "A acurácia é foi de 100.00%\n"
+            "A acurácia é foi de 95.83%\n"
           ],
           "name": "stdout"
         }
@@ -271,11 +291,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FLBMq2H2SLLl",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true,
+          "base_uri": "https://localhost:8080/",
+          "height": 248
         },
-        "outputId": "f46f0f5c-7936-458f-ed03-c28db7796a33"
+        "id": "FLBMq2H2SLLl",
+        "outputId": "f9bd6155-1c14-41fe-e3c9-9ba27d5b2567"
       },
       "source": [
         "from sklearn.model_selection import train_test_split\r\n",
@@ -304,7 +326,7 @@
           "output_type": "stream",
           "text": [
             "Treinaremos com 74 elementos e testaremos 25 elementos.\n",
-            "A acurácia é foi de 96.00%\n"
+            "A acurácia foi de 96.00%\n"
           ],
           "name": "stdout"
         }
@@ -314,10 +336,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "r9OOEufaRwh5",
-        "outputId": "87fadc66-435a-4d29-dea7-d60c67df75c7"
+        "outputId": "a8e1b77c-d9c7-4f6a-e4ca-7518cdbeacf1"
       },
       "source": [
         "train_y.value_counts()"
@@ -328,15 +351,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    47\n",
-              "1    27\n",
+              "0    49\n",
+              "1    25\n",
               "Name: bought, dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 0
         }
       ]
     },
@@ -344,10 +367,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "EoxU7LzWR-Aa",
-        "outputId": "cd2b5435-1a95-4966-d58f-e34e5c9abac2"
+        "outputId": "b9d94b7f-6587-4245-c12d-ec5486cf3e76"
       },
       "source": [
         "test_y.value_counts()"
@@ -358,21 +382,24 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    19\n",
-              "1     6\n",
+              "0    17\n",
+              "1     8\n",
               "Name: bought, dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 0
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "C2VS8UEsSBPT"
       },
       "source": [
