--- a/ML_004.ipynb
+++ b/ML_004.ipynb
@@ -580,10 +580,10 @@
       },
       "source": [
         "pixels = 100\r\n",
-        "axe_x = np.arange(x_min, x_max, (x_max - x_min) / pixels)\r\n",
-        "axe_y = np.arange(y_min, y_max, (y_max - y_min) / pixels)\r\n",
+        "axis_x = np.arange(x_min, x_max, (x_max - x_min) / pixels)\r\n",
+        "axis_y = np.arange(y_min, y_max, (y_max - y_min) / pixels)\r\n",
         "\r\n",
-        "xx, yy = np.meshgrid(axe_x, axe_y)\r\n",
+        "xx, yy = np.meshgrid(axis_x, axis_y)\r\n",
         "\r\n",
         "points = np.c_[xx.ravel(), yy.ravel()]"
       ],
@@ -796,10 +796,10 @@
         "y_max = data_y.max()\r\n",
         "\r\n",
         "pixels = 100\r\n",
-        "axe_x = np.arange(x_min, x_max, (x_max - x_min) / pixels)\r\n",
-        "axe_y = np.arange(y_min, y_max, (y_max - y_min) / pixels)\r\n",
+        "axis_x = np.arange(x_min, x_max, (x_max - x_min) / pixels)\r\n",
+        "axis_y = np.arange(y_min, y_max, (y_max - y_min) / pixels)\r\n",
         "\r\n",
-        "xx, yy = np.meshgrid(axe_x, axe_y)\r\n",
+        "xx, yy = np.meshgrid(axis_x, axis_y)\r\n",
         "\r\n",
         "points = np.c_[xx.ravel(), yy.ravel()]\r\n",
         "\r\n",
